fixed broken link and signup modal behind filtered games page

--- a/react-app/src/components/LandingPage/landingpage.css
+++ b/react-app/src/components/LandingPage/landingpage.css
@@ -135,7 +135,7 @@ body {
     cursor: pointer;
     position: relative;
     top: 0px;
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 .outterdivpicgamesfiltered:hover {
